--- a/templates/dash/dash_berita.html
+++ b/templates/dash/dash_berita.html
@@ -48,7 +48,7 @@
             <div class="container-fluid">
                 <div class="container-fluid panel-footer"> {{obj.timestamp}}
                     <div class="pull-right">
-                        <span id='btn-berit' <button class="btn btn-info" type="button">Baca</button></span>
+                        <!-- <span id='btn-berit' <button class="btn btn-info" type="button">Baca</button></span> -->
                     </div>
                 </div>
             </div>
