--- a/templates/dash/dashbase.html
+++ b/templates/dash/dashbase.html
@@ -70,7 +70,7 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li>
 
-                        <div class="dropdown">
+                        <!-- <div class="dropdown">
                             <button class="btn btn-navbar dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
 
                               <i class="fa fa-envelope fa-msg-custom fa-fw" aria-hidden="true"></i>
@@ -83,7 +83,7 @@
                                 <li role="separator" class="divider"></li>
                                 <li><a href="#">Separated link</a></li>
                             </ul>
-                        </div>
+                        </div> -->
                     </li>
 
                     <li>
