--- a/templates/dash/dash_pengaturan.html
+++ b/templates/dash/dash_pengaturan.html
@@ -1,52 +1,29 @@
 {% extends 'dash/dashbase.html' %}
 {% load staticfiles %}
+{% load crispy_forms_tags %}
 
 {% block content %}
-
+<div class="page-header">
+    <h1>Ubah Password <small></small></h1>
+</div>
 <div class="container-fluid">
     <div class="row">
         <!-- Card Projects -->
-        <div class="col-lg-5 col-md-5">
-            <div class="card">
-                <div class="card-image">
-                    <img class="img-responsive" src="http://material-design.storage.googleapis.com/publish/v_2/material_ext_publish/0Bx4BSt6jniD7TDlCYzRROE84YWM/materialdesign_introduction.png">
-                    <span class="card-title">Material Cards</span>
-                </div>
 
-                <div class="card-content">
-                    <p>Cards for display in portfolio style material design by Google.</p>
-                </div>
-                <a href="{% url 'dashboard:adm_cetak'%}" type="button" class="btn btn-sm btn-primary"><i class="fa fa-check-square"></i>&nbsp;Cetak</a>
-                <div class="card-action"></button>
-                    <a href="#" target="new_blank">Link</a>
-                    <a href="#" target="new_blank">Link</a>
-                    <a href="#" target="new_blank">Link</a>
-                    <a href="#" target="new_blank">Link</a>
-                    <a href="#" target="new_blank">Link</a>
-                </div>
-            </div>
+
+        <div class="col-md-1 col-xs-0">
         </div>
-
-        <div class="col-lg-5 col-md-5">
-            <div class="card">
-                <div class="card-image">
-                    <img class="img-responsive" src="http://material-design.storage.googleapis.com/publish/v_2/material_ext_publish/0Bx4BSt6jniD7TDlCYzRROE84YWM/materialdesign_introduction.png">
-                    <span class="card-title">Material Cards</span>
-                </div>
-
-                <div class="card-content">
-                    <p>Cards for display in portfolio style material design by Google.</p>
-                </div>
-
-                <div class="card-action">
-                    <a href="#" target="new_blank">Link</a>
-                    <a href="#" target="new_blank">Link</a>
-                    <a href="#" target="new_blank">Link</a>
-                    <a href="#" target="new_blank">Link</a>
-                    <a href="#" target="new_blank">Link</a>
-                </div>
+        <div class="col-md-10 col-xs-12">
+            <!-- <h3>Pastikan setiap F.A.Q. memiliki maksud dan instruksi yang jelas dan efisien.</h3> -->
+            <br /><br />
+            <form method='POST' enctype="multipart/form-data" action=''>
+              {% csrf_token %}
+              {{form|crispy}}
+                  <button type="submit" class="btn btn-success">Simpan</Button>
+            </form>
+            <div class="col-md-1 col-xs-0">
             </div>
-        </div>
+      </div>
 
     </div>
 </div>
