--- a/templates/dash/dash_detail_berita.html
+++ b/templates/dash/dash_detail_berita.html
@@ -24,7 +24,7 @@
 
             </div>
             <div class="container-fluid">
-                <div class="container-fluid panel-footer"> {{obj.timestamp}}
+                <div class="container-fluid panel-footer"> {{obj.timestamp}} <b> Oleh : {{obj.author}}</b>
                     <div class="pull-right">
                       {% if user.is_superuser %}
                       <a class="btn btn-danger btn-sm pull-right" href="{% url 'dashboard:del_berita' id=obj.id %}"> Hapus </a> &nbsp; &nbsp;
