--- a/templates/adm/adm_listPendaftar.html
+++ b/templates/adm/adm_listPendaftar.html
@@ -10,7 +10,8 @@
 
 <div class="row">
 
-        <n<div class="container-fluid" id ="containerPills">
+        <div class="container-fluid" id ="containerPills">
+          <div class="row">
             <div class="col-md-12">
               <div class="mailbox-controls">
 
@@ -18,28 +19,69 @@
 
                       <form class="form-inline" method="GET">
                           <div class="form-group">
+                              <a href="{% url 'dashboard:listPendaftar' %} " class="btn btn-default btn-sm"><i class="glyphicon glyphicon-refresh"></i> &nbsp; Refresh</a>
                               <input type="text" id="kunci" name="kunci" class="form-control input-sm" maxlength="30" placeholder="Masukkan Kunci" />
                               <button type="submit" class="btn btn-default btn-sm">Cari</button>
                           </div>
                       </form>
                   </div>
               </div>
+              </div>
             </div>
         </div>
-        <!-- <div class="col-md-1">
+        <div class="container-fluid" id="containerPills">
+            <div class="row">
+                <div class="col-md-12">
 
-      </div> -->
+                    <div class="mailbox-controls">
+                        <div class="pull-right">
+                            <form class="form-inline" method='POST' action="">
+
+                                {% csrf_token %}
+                                <select name="prodi" class="form-control input-sm">
+
+                              <option>Teknik Mesin</option>
+                              <option>Teknik Arsitektur</option>
+                              <option>Teknik Sipil</option>
+                              <option>Teknik Kimia</option>
+                              <option>Teknik Industri</option>
+                              <option>Teknik Elektro</option>
+                            </select>
+
+                                <select name="fakultas" class="form-control input-sm">
+
+                              <option>Teknik</option>
+                              <option>Komunikasi dan Informatika</option>
+                                </select>
+
+                                <!-- <select name="tahun" class="form-control input-sm">
+                              <option>2016</option>
+                              <option>2017</option>
+                            </select> -->
+                                <input class="btn btn-info btn-sm" type="submit" value="Tampilkan">
+
+                            </form>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+<br />
         <div class="table-responsive col-md-12">
             <table class="table table-striped table-hover">
                 <thead>
                     <tr>
-                        <th>Nama Lengkap</th><th>Fakultas</th><th>Status</th>
+                        <th>No.</th><th>Nama Lengkap</th><th>Fakultas</th><th>Status</th>
                         <th>Program Studi</th><th>Opsi</th>
                     </tr>
                 </thead>
                 <tbody>
                     {% for obj in instance %}
                     <tr>
+                        <td><p>{{ forloop.counter }}</p></td>
                         <td><p>{{obj.nama}}</p></td>
                         <td><p>{{ obj.fakultas }}</p></p></td>
                         {% if obj.valid %}
@@ -51,7 +93,9 @@
                         <td class="col-md-2"><p>
 
                           <a class="btn btn-success" href="{% url 'dashboard:adm_profile_detail' id=obj.id %}"><i class="fa fa-check-square-o fa-lg"></i> &nbsp;Tinjau &nbsp;&nbsp;&nbsp;&nbsp;</a>
+                          {% if user.is_superuser %}
                           <br /><a class="btn btn-info btn-sm" href="{% url 'dashboard:adm_invalidasi' id=obj.id  %}" id="btnPengumuman" ><i class="fa fa-times fa-lg"></i>&nbsp;Invalidasi&nbsp;&nbsp;&nbsp;&nbsp;</a>
+                          {% endif %}
                         </p></td>
                     </tr>
                     {% endfor %}
