--- a/templates/adm/edit_berita.html
+++ b/templates/adm/edit_berita.html
@@ -19,9 +19,9 @@
   <div class="col-md-10 col-xs-12">
       <br /><br />
       <form method='POST' enctype="multipart/form-data" action=''>
-        {% csrf_token %}
-        {{form|crispy}}
-            <button type="submit" class="btn btn-success">Simpan</Button>
+            {% csrf_token %}
+            {{form|crispy}}
+            <button type="submit" class="btn btn-success">Submit</Button>
       </form>
       <div class="col-md-1 col-xs-0">
       </div>
