--- a/templates/dash/dash_baca_pesan.html
+++ b/templates/dash/dash_baca_pesan.html
@@ -12,8 +12,22 @@
     <h1>Baca Pesan <small>Baca,Tulis dan Kirim Pesan.</small></h1>
 </div>
 
+<div class="container-fluid" id="containerPills">
+    <div class="row">
+        <div class="col-md-12">
 
+            <div class="mailbox-controls">
+                <div class="pull-left">
+                    <a href="{% url 'dashboard:pesan' %} " class="btn btn-default btn-sm"><i class="glyphicon glyphicon-arrow-left"></i> &nbsp; Kembali</a>
 
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<br />
+<div class="row">
 <div class="col-md-12">
     <div class="container-fluid">
 
@@ -35,7 +49,7 @@
 
         </div>
     </div>
-
+</div>
 </div>
 
 {% endblock %}
