--- a/templates/dash/dash_home.html
+++ b/templates/dash/dash_home.html
@@ -59,7 +59,7 @@
                    </g>
                  </g>
 
-                 <span>25 km/h</span>
+                 <!-- <span>25 km/h</span> -->
                </div>
              </div>
 
@@ -97,7 +97,7 @@
            <figure style="background-image: url(http://136.243.1.253/~creolitic/bootsnipp/home.jpg)"></figure>
          </div>
 
-         <div class="days">
+         <!-- <div class="days">
            <div class="row row-no-gutter">
              <div class="col-md-4">
                <div class="day">
@@ -129,9 +129,9 @@
                    </g>
                  </svg>
                </div>
-             </div>
+             </div> -->
 
-             <div class="col-md-4">
+             <!-- <div class="col-md-4">
                <div class="day">
                  <h1>Tuesday</h1>
                  <svg version="1.1" id="icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 59.077 59.077" style="enable-background:new 0 0 59.077 59.077;" xml:space="preserve">
@@ -161,9 +161,9 @@
                    </g>
                  </svg>
                </div>
-             </div>
+             </div> -->
 
-             <div class="col-md-4">
+             <!-- <div class="col-md-4">
                <div class="day">
                  <h1>Wednesday</h1>
                  <svg version="1.1" id="icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 59.077 59.077" style="enable-background:new 0 0 59.077 59.077;" xml:space="preserve">
@@ -193,7 +193,7 @@
                    </g>
                  </svg>
                </div>
-             </div>
+             </div> -->
 
            </div>
          </div>
