--- a/templates/dash/dash_profile.html
+++ b/templates/dash/dash_profile.html
@@ -66,7 +66,7 @@
                      <a href="{% url 'dashboard:cetak_bukti_daftar'%}" type="button" class="btn btn-sm btn-primary"><i class="fa fa-check-square"></i>&nbsp;Cetak</a>
                      <span class="pull-right">
                          <a href="{% url 'dashboard:edit_profile' id=user.id %}" data-original-title="Edit this user" data-toggle="tooltip" type="button" class="btn btn-sm btn-warning"><i class="fa fa-pencil-square-o"></i>&nbsp;Edit</a>
-                         <a data-original-title="Remove this user" data-toggle="tooltip" type="button" class="btn btn-sm btn-danger"><i class="fa fa-trash-o"></i>&nbsp;Delete</a>
+                         <!-- <a data-original-title="Remove this user" data-toggle="tooltip" type="button" class="btn btn-sm btn-danger"><i class="fa fa-trash-o"></i>&nbsp;Delete</a> -->
                      </span>
                       </div>
 
