--- a/templates/landing/register.html
+++ b/templates/landing/register.html
@@ -13,12 +13,13 @@
       <form method='POST' action=''>
         {% csrf_token %}
         {{formReg|crispy}}
-            <button type="submit" class="btn btn-success">Login</Button>
+            <button type="submit" class="btn btn-success">register</Button>
       </form>
       <div class="col-md-3">
       </div>
 </div>
 
 </div>
+<br /><br /><br /><br />
 
 {% endblock %}
